
* SOLR-13560: Add isNull and notNull Stream Evaluators (Joel Bernstein)

* SOLR-10291: Add matches Stream Evaluator to support regex matching (Joel Bernstein)

* SOLR-13367: Highlighting: Range queries will now highlight in hl.method=unified mode. (David Smiley)

* SOLR-13569: AdminUI visual indication of prod/test/dev environment (janhoy)

Bug Fixes
----------------------

* SOLR-13474: Fix "Search is temporarily disabled" logic to be consistent for entire request (hossman)

* SOLR-13469: Fix rejected requests during full disk full + IndexFetch to use 503 not 403 (hossman)

* SOLR-12941: Fix IndexSizeTrigger to correctly work with "aboveBytes" and "splitMethod=link" parameters. (ab)

* SOLR-13491: SolrZkClient's watch wrapper no longer allows zookeeper to hold the same watch object multiple times.

* SOLR-13489: Stop the leader from trying to rejoin the election on session expiration and harden our zk reconnect code path.
  (Mark Miller, Anshum Gupta)

* SOLR-12249: Better error message when grouping on a tokenized (non SortableText) field in SolrCloud (Erick Erickson)

* SOLR-13521: Fix input parameter handling in SchemaRequest.DynamicField and SchemaRequest.FieldTypes (Schema API)
  (Tomás Fernández Löbbe)

* SOLR-13496: Fix distributed grouping related NullPointerException in JSONWriter.writeSolrDocument (Christine Poerschke)

* SOLR-12013: collections API CUSTERSTATUS command fails when configset missing (Erick Erickson)

* SOLR-13509: NPE on omitHeader=true is fixed by sending omitHeader=false to shard searches (Munendra S N, Mikhail Khludnev)

* SOLR-13333: unleashing terms.ttf from terms.list when distrib=false (Munendra S N via Mikhail Khludnev)

* SOLR-13490: Fix CollectionStateWatcher/CollectionStatePredicate based APIs in ZkStateReader and
  CloudSolrClient to be triggered on liveNode changes.  Also add Predicate<DocCollection> equivalents
  for callers that don't care about liveNodes. (hossman)
